Update before merge